refactor: refatorando testes do pacote personController